--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: yellow;
 }
 div {
-  border: 1px solid black;
+  /* border: 1px solid black;*/
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
